# discord-bot

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE
bot/: __init__.py  __main__.py  bot.py  config.py  logger.py
bot/cogs/: emote.py  events.py  guild.py  member.py  misc.py  roleplay.py  stalker.py  tools.py
bot/core/: __init__.py  bot.py  config.py  logger.py  webhook.py
bot/db/: schema.prisma
bot/ext/: __init__.py  checks.py  converters.py  dropdown.py  embed.py  profile.py  views.py  webhook.py
bot/listeners/: bot_profile.py  chatbot.py  fix_preview.py  logger_handler.py
bot/locale/: en_US.json  fr.json  pt_BR.json
bot/services/: __init__.py  g4f.py  imagga.py  pil.py  tiktok.py  url_validator.py
src/: __main__.py  bot.py  config.py  constants.py  errors.py  log.py
src/api/: groq.py  open_meteo.py  spotify.py  witai.py
src/components/: __init__.py  buttons.py  palette.py  spotify.py  webhook.py
src/converters/: emote.py  hex.py
src/extensions/: afk.py  ai.py  alias.py  calculator.py  emote.py  fake.py  fix_preview.py  member_info.py  misc.py  profile.py  reminder.py  server_info.py  spotify.py  stalker.py  sticker.py  weather.py
src/plugins/: afk.py  avatar.py  badge.py  better_previews.py  calculator.py  color.py  emojis.py  emojis_and_stickers.py  emote.py  fake.py  member_info.py  profile.py  server_info.py  stalker.py  sticker.py  watchdog.py
src/types/: color.py  emote.py
(+9 files in other folders)
