[tool.mypy]
python_version = "3.10"
exclude = [
    "collections",
    "tests",
    "venv",
]
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "W", "C90", "S", "I", "N", "UP"]
ignore = ["N999"]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 117
target-version = "py310"
fix = true

[tool.ruff.per-file-ignores]
"tests/*" = ["SLF001"]
".github/*" = ["INP001"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 117
target-version = ["py310"]

[tool.black.include]
paths = [
    "examples",
    "cloudia",
    "tests",
]

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["venv",]
skips = ["B101",]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"
disnake = "^2.9.1"
pillow = "^10.2.0"
browser-cookie3 = "^0.19.1"
wavelink = "^3.2.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.8"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.9.0"
mypy-extensions = "^1.0.0"
pre-commit = "^3.6.3"
pytest = "^5.4.3"
python-dotenv = "^1.0.1"
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
